<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="6dp"
        android:paddingEnd="6dp">

        <TextView
            android:id="@+id/itn_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itn_text"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/itn_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/zero"
            android:layout_toEndOf="@id/itn_static"/>

        <TextView
            android:id="@+id/higscore_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_marginStart="6dp"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/higscore_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highscore_text"
            android:layout_toStartOf="@id/higscore_count"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/flip_image1"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/flip_image2"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/flip_image3"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/flip_image4"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/flip_image5"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/flip_image6"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/flip_image7"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/flip_image8"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/flip_image9"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/timeleft"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/progress_background"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/progress_drawable" />

</LinearLayout>
